--- a/index.html
+++ b/index.html
@@ -405,8 +405,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
-                    <div class="icons">
+                    <p>Open for internship opportunities, in the domain of web development, software development, application development or any innovative collobrative project, Startup etc.
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
