--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="contactForm.php">
+                    <form action="mailto:tridevansh.160601@gmail.com">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" name="Name" required>
@@ -447,7 +447,7 @@
                             <textarea cols="30" name="Message" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button">
-                            <button type="submit">Send message</button>
+                            <a href="mailto:tridevansh.160601@gmail.com"><button type="submit"> Send message</button></a>
                         </div>
                     </form>
                 </div>
