--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="mailto:tridevansh.160601@gmail.com">
+                    <!-- <form method="POST">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" name="Name" required>
@@ -557,7 +557,26 @@
                         <div class="button">
                             <a href="mailto:tridevansh.160601@gmail.com"><button type="submit"> Send message</button></a>
                         </div>
-                    </form>
+                    </form> -->
+                    <form action="https://getform.io/f/6e1b0f13-3d4d-4bc5-93ee-c2b710e97b4d" method="POST">
+                      <div class="fields">
+                        <div class="field name">
+                            <input type="text" placeholder="Name" name="Name" required>
+                        </div>
+                        <div class="field email">
+                            <input type="email" placeholder="Email" name="Email" required>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <input type="text" placeholder="Subject" name="Subject" required>
+                    </div>
+                    <div class="field textarea">
+                        <textarea cols="30" name="Message" rows="10" placeholder="Message.." required></textarea>
+                    </div>
+                    <div class="button">
+                        <a><button type="submit"> Send message</button></a>
+                    </div>
+                  </form>
                 </div>
             </div>
         </div>
