--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -111,21 +111,23 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text counter">12532</div> 
+                        <span style="font-size: 45px; font-weight: bold;"  data-purecounter-start="0" data-purecounter-end="9874" data-purecounter-duration="2" class="purecounter"></span>
                         <p>Lines of code written</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-laptop-code"></i>
-                        <div class="text counter" >8</div>
+                        <span style="font-size: 45px; font-weight: bold;" data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="2" class="purecounter"></span>
+
                         <p>Number of projects made</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-coffee"></i>
-                        <div class="text counter">366</div>
+                        <span style="font-size: 45px; font-weight: bold;" data-purecounter-start="0" data-purecounter-end="560" data-purecounter-duration="2" class="purecounter"></span>
+
                         <p>Number of coffee drunk</p>
                     </div>
                 </div>
@@ -589,6 +591,8 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="pureCounter.js"></script>
+    
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"> -->
 
 </body>
