--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         I am passionate at implementing solutions for problems using technology which in turn encourages me to learn new technologies.
                         I am also a passionate debater, Autodidact and a person who love to visit new places.</p></div>
                    
-                    <a href="MyResume-s.pdf" target="blank">My Resume</a>
+                    <a href="Resume-s.pdf" target="blank">My Resume</a>
                 </div>
             </div>
         </div>
