--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a  href="https://www.linkedin.com/in/devansh-trivedi-a937851b0/" target="blank"><i class="fab fa-linkedin"></i></a>
                     <a  href="mailto:tridevansh.160601@gmail.com?subject=Mail from Devansh Trivedi portfolio website" target="blank"><i class="fas fa-envelope"></i></a>
                     <a  href="https://twitter.com/_DevanshTrivedi" target="blank"><i class="fab fa-twitter"></i></a>
-                    <a  href="https://www.instagram.com/__devanshtrivedi/" target="blank"><i class="fab fa-instagram"></i></a>
+                    <!-- <a  href="https://www.instagram.com/__devanshtrivedi/" target="blank"><i class="fab fa-instagram"></i></a> -->
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                         I am passionate at implementing solutions for problems using technology which in turn encourages me to learn new technologies.
                         I am also a passionate debater, Autodidact and a person who love to visit new places.</p></div>
                    
-                    <a href="Resume-s.pdf" target="blank">My Resume</a>
+                    <a href="Resume_Devansh_Trivedi.pdf" target="blank">My Resume</a>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-coffee"></i>
-                        <span style="font-size: 45px; font-weight: bold;" data-purecounter-start="0" data-purecounter-end="560" data-purecounter-duration="2" class="purecounter"></span>
+                        <span style="font-size: 45px; font-weight: bold;" data-purecounter-start="0" data-purecounter-end="560" data-purecounter-duration="1" class="purecounter"></span>
 
                         <p>Number of coffee drunk</p>
                     </div>
@@ -216,7 +216,7 @@
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>Software development</span>
+                            <span>C/C++</span>
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
@@ -230,15 +230,22 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>SQL</span>
+                            <span>NoSQL & SQL</span>
                             <span>80%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
+                      <div class="info">
+                          <span>DBMS</span>
+                          <span>70%</span>
+                      </div>
+                      <div class="line mysql"></div>
+                  </div>
+                    <div class="bars">
                         <div class="info">
                             <span>MERN stack</span>
-                            <span>50%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
@@ -256,6 +263,14 @@
                         </div>
                         <div class="line mysql"></div>
                     </div>
+                    <div class="bars">
+                      <div class="info">
+                          <span>Data Structure & Algorithms</span>
+                          <span>90%</span>
+                      </div>
+                      <div class="line html"></div>
+                  </div>
+                    
                 </div>
             </div>
         </div>
