--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Devansh </div> <div class="text">And I'm a <span class="typing-2"></span></div>
-                    <div> <p>An engineer with interdisplinary interest, passionate about developing solutions that can impact life. I am interested in Software Development, Machine Learning and Web Development.
-                        I am passionate at implementing solutions for problems using technology which in turn encourages me to learn new technologies.
+                    <div> <p>An engineer with interdisplinary interest, passionate about developing solutions that can impact life. Being a buddying engineering student who loves to learn new things. I'm also aspirational and highly enthuastic person, who is innovator by heart and engineer by work, always in a search of opportunity so that I can leverage my skills and make an impact on people.
                         I am also a passionate debater, Autodidact and a person who love to visit new places.</p></div>
                    
                     <a href="Resume_Devansh_Trivedi.pdf" target="blank">My Resume</a>
@@ -210,7 +209,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I love and enjoy learning new frameworks and languages, and used those in my projects. The most important skill I think I pursue is the ability and willingness to learn, implement and invent new things. According to me finding solutions does not require great efforts, but findings problems requires efforts, as it cannot be seen by nacked eyes. I enjoy making websites, softwares, applications and most important I can adjust and work in any environment and with any amount of pressure.</p>
+                    <p>I love and enjoy learning new frameworks and languages, and used those in my projects. The most important skill I think I pursue is the ability and willingness to learn, implement and invent new things. According to me finding solutions does not require great efforts, but findings problems requires efforts, as it cannot be seen by nacked eyes. I enjoy making websites, softwares, applications.</p>
                     <a href="https://www.linkedin.com/in/devansh-trivedi-a937851b0/" target="blank">Read more</a>
                 </div>
                 <div class="column right">
@@ -549,7 +548,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">tridevansh.160601@gmail.com</div>
+                                <div class="sub-title"><a href="mailto:tridevansh.160601@gmail.com" style="text-decoration: none; color: black;">tridevansh.160601@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
